--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="col-md-8">
   			<h1 >Wellness Tracker   <span id="gold" class="glyphicon glyphicon-apple"></span></h1> 
-  			<p>Earn rewards from your employer by recording your healthy choices and activities every day!</p>
-  			<%= link_to "User guide", '/guide' , class: "user-guide", method: :get %>
+  			<p>encouraging your healthy choices and activities every day!</p>
+  			<%= link_to "User guide", '/guide' , class: "bigger-mobile-text", method: :get %>
   		</div>
   		<div class="col-md-4">
   			<%= render 'welcome/login' %>
@@ -12,5 +12,6 @@
 	</div>
  
 </div>
+
 
 </body>
