--- a/blog/app/views/layouts/_header.html.erb
+++ b/blog/app/views/layouts/_header.html.erb
@@ -8,8 +8,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <%=link_to( image_tag("purpleLogo.png", :class => "small_logo"), '/index') %>
-            
+                <%=link_to( image_tag("purpleLogo.png", :class => "small_logo"), '/guide') %>
+
 
 
 
