--- a/blog/app/views/welcome/_login.html.erb
+++ b/blog/app/views/welcome/_login.html.erb
@@ -1,14 +1,15 @@
 <div class="fuck">   
   <h3>Log in</h3>
+  <br/>
   <div class="form-group">
     <%= form_tag '/login' do %>
-      </br>
       <%= text_field_tag :email, nil, :placeholder => 'Enter User Email...'%>
+      <br/> <br/>
       <%= password_field_tag :password, nil, :placeholder => 'Enter Password...'%>
-      <br/>
+      <br/><br/>
       <%= submit_tag "Login", :class => "btn btn-primary btn-lg subsign" %>
       <%= link_to "Sign up", '/signup', :class => "btn btn-primary btn-lg subsign", method: :get %>
-	 </br><%= link_to "(forgot password)", new_password_reset_path %>
+	 <br/><br/><%= link_to "forgot password?", new_password_reset_path, :class => "bigger-mobile-text"%>
     <% end %>
   </div>
 
