--- a/blog/app/views/user_mailer/registration_confirmation.html.erb
+++ b/blog/app/views/user_mailer/registration_confirmation.html.erb
@@ -6,6 +6,8 @@
 <body>
 <h1>Welcome</h1>
 <p>track your wellness program activities with Life Care Wellness!</p>
+
+<p>your username is : <%= @user.email %> </p>
 <p>
 your password is: <%= @user.password %>
 </p>
@@ -13,6 +15,6 @@ your password is: <%= @user.password %>
 <p>
 Please click the link to confirm your account and start tracking your activities!
 </p>
-<a href=<%=@link %>>Sign Up! </a>
+<a href=<%=@link %>> Confirm Your Account! </a>
 </body>
 </html>
