--- a/blog/app/views/users/new.html.erb
+++ b/blog/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
     <p> if you haven't already registered with your @lifecarealliance.org email address, you can do so here. </p>
 </div>
 
-<div class="fuck">
+<div class="quick">
 
   <%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
     <p> First name:</p> <%= f.text_field :fname%> 
@@ -23,3 +23,5 @@
     </ul>
   <% end %>
 </div>
+
+
