--- a/blog/app/views/welcome/guide.html.erb
+++ b/blog/app/views/welcome/guide.html.erb
@@ -1,3 +1,7 @@
+
+
+<div class="col-md-1"></div>
+<div class="col-md-10">
 <h1>LifeCare Alliance Wellness Automation User Guide</h1>
 
 <p>Built by OSU Software Capstone Class of 2016</p>
@@ -77,5 +81,7 @@ This screen displays the names of your co workers and displays their team and po
 Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Profile” will take you to your personal profile, and “Add Points” will take you to the input form for logging your activities. Since you are already on the scoreboard, clicking “Scoreboard” merely refreshes the page.</br></br></p>
 <hr>
 
+</div>
+<div class="col-md-1"></div>
 
 
