--- a/blog/app/assets/stylesheets/main.scss
+++ b/blog/app/assets/stylesheets/main.scss
@@ -242,3 +242,26 @@ span {
 	text-color: #88cc88;
 	color: #7777bb;
 }
+
+.sidepanel {
+	padding: 8px;
+	background-color: #eeeeef;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #efefef;
+	border-radius: 2px;
+	margin-right: 30px;
+}
+
+@media all and (max-width: 980px){
+	
+	p,span,a,td,th {
+	 font-size: 135% !important;
+	 text-align: center;
+ 	}
+
+}
+
+.padleft {
+	align: center;
+}
