--- a/blog/app/views/activities/edit.html.erb
+++ b/blog/app/views/activities/edit.html.erb
@@ -1,5 +1,11 @@
-<div class="jumbotron">
-	<h2 style="text-align:center;">Edit Activity</h2>
-</div>
+
+<div class="col-md-2"></div>
+<div class="col-md-8">
+<!-- these were in "form" but form never gets displayed by itself!!!  -->
+<h1> Edit Activity</h1>
+
 
 <%= render 'form' %>
+
+</div>
+<div class="col-md-2"></div>
