--- a/blog/app/views/activities/new.html.erb
+++ b/blog/app/views/activities/new.html.erb
@@ -1,3 +1,12 @@
+
+<div class="col-md-2"></div>
+<div class="col-md-8">
+<!-- these were in "form" but form never gets displayed by itself!!! -->
+
+
 <h1>New Activity</h1>
 
 <%= render 'form' %>
+
+</div>
+<div class="col-md-2"></div>
