--- a/blog/app/views/departments/new.html.erb
+++ b/blog/app/views/departments/new.html.erb
@@ -1,3 +1,10 @@
-<h1>New Activity</h1>
 
-<%= render 'form' %>
+<div class="col-md-2"></div>
+
+<div class="col-md-8">	
+	<h1>New Department</h1>
+
+	<%= render 'form' %>
+</div>
+
+<div class="col-md-2"></div>
