--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -6,8 +6,8 @@
 <p id="userid" style="display:none;">
 	<%= @user.id %>
 </p>
-<p> <%= @department.name %> </p>
-<p> <%= @user.email %>  </p>
+<br/>
+<p> <%= @department.name %>  - <%= @user.email %> </p>
 </div>
 <div class="col-md-2">
     <% if current_user == @user %> 
@@ -73,7 +73,7 @@ $(document).ready(function(){
 
         makeProgress = function(){
             $('svg').remove();
-			var width = window.innerWidth * .5;
+			var width = window.innerWidth * .6;
 			var score = $('#score').text();
     		var goal = $('#usergoal').text();
 			var progress =  score / goal;		
@@ -82,9 +82,7 @@ $(document).ready(function(){
 			
 			svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
 
-            if (width < 470){
-               width = width - 70;
-            }
+
     		svg.setAttribute('height', '50');
 
 			svg.setAttribute('width', width);
@@ -102,7 +100,7 @@ $(document).ready(function(){
                 $('#ssx').text("Good job! you reached your goal.");
             }
             else {
-                $('#ssx').css("margin-left", progress*width-40);
+                $('#ssx').css("margin-left", progress*width);
             }
 
 			var baseLine = document.createElementNS('http://www.w3.org/2000/svg', 'line');
