--- a/blog/app/views/user_mailer/registration_confirmation.html.erb
+++ b/blog/app/views/user_mailer/registration_confirmation.html.erb
@@ -11,9 +11,14 @@
 <p>
 your password is: <%= @user.password %>
 </p>
-
 <p>
-Please click the link to confirm your account and start tracking your activities!
+Please click the link from a desktop browser to confirm your account and start tracking your activities!
+</p>
+<p>
+The link may not work from a mobile phone. 
+</p>
+<p> 
+Once you have confirmed your account, Wellness Tracker will work in your mobile phone browser or from your desktop. 
 </p>
 <a href=<%=@link %>> Confirm Your Account! </a>
 </body>
