--- a/blog/app/views/welcome/guide.html.erb
+++ b/blog/app/views/welcome/guide.html.erb
@@ -4,8 +4,12 @@
 <div class="col-md-10">
 <h1>LifeCare Alliance Wellness Automation User Guide</h1>
 
-<p>Built by OSU Software Capstone Class of 2016</p>
+<p></p>
 <hr>
+
+<p>Wellness Tracker was built by OSU Software Capstone students from the class of 2016. Wellness Tracker can be used with mobile browsers or on your desktop. We recommmend using Google Chrome for the best experience. </p>
+
+<p> Wellness Tracker is available 18 out of 24 hours each day. If you find that the site is down, you may need to come back tomorrow to add your points. </p>
 
 <p>1. Login Screen</p>
 <center><img src="/assets/login_desktop.png" alt="Desktop"></center>
